eusay/static/css/style.css
#title {
	font-family: Helvetica, Arial, sans-serif;
	color: #9d9fa2;
}
.pink {
	color: #ed174e !important;
}
body {
    margin-bottom: 20px;
	background: #fff url("/static/img/cream_dust.png");
}
#logo {
	font-size: 1.8em;
	font-family: Helvetica, Arial, sans-serif;
}
.navbar {
	border-radius: 0px !important;
}

/* Front page */
.index-main-button {
    margin-bottom: 5px;
}
.index-see-more-link {
    font-size: 0.6em;
}
.proposalCard {
	height: 300px;
	max-width: 230px;
	margin: 0 auto 25px auto;
	border-radius: 6px;
	border: 1px solid #ed174e;
	position: relative;
}
.proposalCard:hover * {
	color: #fff;
}
.proposalCard:hover {
	background-color: #ed174e;
	cursor: pointer;
}
.proposalCard span {
	position:absolute;
	width:100%;
	height:100%;
	top:0;
	left: 0;
	/* edit: added z-index */
	z-index: 1;
	/* edit: fixes overlap error in IE7/8,
	make sure you have an empty gif
	background-image: url('empty.gif'); */
}
.proposalName {
	padding: 15px;
	font-size: 1.5em;
	word-wrap: break-word;
}
.proposalName a {
	color: #ed174e;
}
.proposalName:hover a {
	color: #fff;
	text-decoration: none;
}
.cardVotes {
	color: #414141;
	padding: 15px;
	height: 70px;
	border-top: 1px solid #ed174e;
}
.cardTags {
    color: #414141;
	padding: 0px 15px;
}
.proposalCard:hover .votes {
	border-top: 1px solid #fff;
}
.proposalCard:hover .submissionTime {
	color: #9D002E;
}
.submissionTime {
	color: #8A8A8A;
	padding: 5px 15px;
	position: absolute;
	bottom: 0;
	right: 0;
}
.endless_more, .endless_loading {
	display: block;
	margin: 10px auto 10px auto;
	font-weight: normal;
	text-align: center;
	vertical-align: middle;
	cursor: pointer;
	background-image: none;x$
	border: 1px solid #cccccc;
	white-space: nowrap;
	border-radius: 6px;
	color: #333333;
	background-color: #ffffff;
	padding: 10px 16px;
	font-size: 18px;
	line-height: 1.33;
}
.endless_more:hover, .endless_loading:hover {
	color: #333333;
	text-decoration: none;
}
.textbox {
    background-color: rgb(240, 240, 240);
    padding: 8px;
}
.green {
    color: green;
}
.red {
    color: red;
}
.green {
    color: green;
.tri {
    font-size: 1.3em;
}
.tri:hover {
    color: grey;
    text-decoration: none;
}
.authorInfo {
    color: grey;
    font-size: 0.8em;
    margin-bottom: 0.2em;
    margin-top: 1em;
}
.commentVotes {
    font-size: 1em;
    text-align: center;
}
.voteUp {
    float: left;
    margin-top: 20px;
}
.voteDown {
    float: right;
    margin-top: 20px;
}
.textbox img, .comment img {
    max-width: 50%;
}
.textbox blockquote {
    font-size: 14px;
}

/* Proposal */
.navbar {
    margin-bottom: 0; /* overrides bootstrap default of 20px */
}
.proposal-hidden {
    display: none;
}
.proposal-progress-bar {
    margin-bottom: 20px;
    height: 5px;
    border-radius: 0;
    overflow: visible;
}
.proposal-page {
    background: #fff;
	-webkit-box-shadow: 0 0 4px rgba(0, 0, 0, 0.2), inset 0 0 50px rgba(0, 0, 0, 0.02);
	-moz-box-shadow: 0 0 4px rgba(0, 0, 0, 0.2), inset 0 0 50px rgba(0, 0, 0, 0.02);
	box-shadow: 0 0 5px rgba(0, 0, 0, 0.2), inset 0 0 50px rgba(0, 0, 0, 0.02);
	padding-bottom: 20px;
	margin-bottom: 15px;
}
.proposal-page:before, .proposal-page:after {
    /* Fancy shadow effects */
	position: absolute;
	width: 40%;
	height: 10px;
	content: ' ';
	left: 12px;
	bottom: 12px;
	background: transparent;
	-webkit-transform: skew(-5deg) rotate(-5deg);
	-moz-transform: skew(-5deg) rotate(-5deg);
	-ms-transform: skew(-5deg) rotate(-5deg);
	-o-transform: skew(-5deg) rotate(-5deg);
	transform: skew(-5deg) rotate(-5deg);
	-webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
	-moz-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
	box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
	z-index: -1;
}
.proposal-page:after {
    /* Fancy shadow effects */
	left: auto;
	right: 12px;
	-webkit-transform: skew(5deg) rotate(5deg);
	-moz-transform: skew(5deg) rotate(5deg);
	-ms-transform: skew(5deg) rotate(5deg);
	-o-transform: skew(5deg) rotate(5deg);
	transform: skew(5deg) rotate(5deg);
}
.proposal-text {
    margin-top: 20px;
    margin-bottom: 30px;
}
.proposal-vote-buttons {
    margin-top: 20px;
}
.proposal-tags {
    margin-top: 10px;
    font-size: 0.9em;
}

/* Comments */
.comment {
    padding: 15px;
    margin-top: 15px;
    background: #fff;
    -webkit-box-shadow: 0 0 4px rgba(0, 0, 0, 0.2), inset 0 0 50px rgba(0, 0, 0, 0.02);
	-moz-box-shadow: 0 0 4px rgba(0, 0, 0, 0.2), inset 0 0 50px rgba(0, 0, 0, 0.02);
	box-shadow: 0 0 5px rgba(0, 0, 0, 0.2), inset 0 0 50px rgba(0, 0, 0, 0.02);
}
.comment-meta {
    color: grey;
    font-size: 0.9em;
}
.comment-user-name-link {
    color: #2F6CB1;
}
.comment-user-title {
    color: grey;
    font-size: 0.9em;
}
.comment-user-status {
    color: #F4CC11;
}
.comment-votes {
    float: right;
    color: grey;
    font-size: 0.9em;
}
.comment-reply-link {
    cursor: pointer;
}
/* Submission form  */
#similar {
    display: none;
}
#editUserForm {
    display: none;
}
#editUserText:hover {
    cursor: pointer;
}
.charNum {
    color: grey;
    font-size: 0.9em;
}

/* Tags */
.tag {
    background-color: #7AA8D5;
    margin: 3px;
    padding: 1px 3px;
    color: #ECECEC;
    display: inline-block;
}
.tag:hover {
    background-color: #6A92BE;
    color: #C5C5C5;
}
#tag-list label {
    /* tags in submit page */
    background-color: #7AA8D5;
    margin: 3px;
    padding: 1px 3px;
    color: #ECECEC;
    display: inline-block;
    font-weight: normal;
}
#tag-list label:hover {
    background-color: #6A92BE;
    color: #C5C5C5;
}
#tag-list li {
    /* make the tag list look less like a list */
    list-style: none;
    float: left;
}
#tag-list {
    padding-left: 0;
}

